# openproject-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  SKILL.md  main.py  pyproject.toml  requirements.txt
.agent/workflows/: openproject.md
tests/: test_main.py
