[project]
name = "openproject-mcp-server"
version = "0.1.0"
description = "A professional Model Context Protocol (MCP) server for OpenProject"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
